Fix problems with horizontal scroll bar by resizing gallery section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 html {
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 98vw;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
     font-weight: 400;
     background: #000;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 98vw;
     display: flex;
     flex-direction: column;
 }
@@ -180,7 +180,6 @@ a {
 
 .container {
     text-align: center;
-    padding: 20px;
     display: inline-block;
 }
 
@@ -270,6 +269,7 @@ a {
 
 .image-container {
     width: 100%;
+    margin-top: 20px;
 }
 
 #image-1 {
@@ -325,7 +325,7 @@ footer {
 
 .social-links>li {
     display: inline;
-    padding-right: 20px;
+    padding-right: 30px;
     align-items: center;
 }
 
@@ -680,7 +680,6 @@ textarea {
 
     .image-container {
         height: 1100px;
-
     }
 
     #image-1,
